GUI-1621: Left-align first row of listeners table headers and add vertical borders; prevent help icon wrapping in "CERTIFICATES" header; fix hover text for "remove listener" icon and add missing i18n:attributes value

--- a/eucaconsole/static/sass/pages/elb.scss
+++ b/eucaconsole/static/sass/pages/elb.scss
@@ -9,20 +9,6 @@ h6.section-label {
     margin-top: 1.5rem;
 }
 
-table.table {
-    width: 100%;
-    tr.top-header {
-        border-bottom: 0;
-    }
-    th.vertical-border-header {
-        border-collapse: collapse;
-        border-right: 1px solid #ddd;
-    }
-    th.center {
-        text-align: center;
-    }
-}
-
 
 // General tab ==================
 #elb-form {
